Complete UserRepository.cs

--- a/HomeWork6/HomeWork6.csproj
+++ b/HomeWork6/HomeWork6.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="ServiceStack.Text" Version="6.5.0" />
+  </ItemGroup>
+
 </Project>
